# jobs-feed

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json
.github/workflows/: publish-docker.yaml  publish-docs.yaml
client/: index.html  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.svelte  app.d.ts  app.html  main.ts
client/src/components/: Sidebar.svelte  Toolbar.svelte
client/src/lib/: constants.ts  store.ts  types.ts  utils.ts
client/src/lib/api/: filters.ts  index.ts  postings.ts  settings.ts  sources.ts  suggestions.ts  usage.ts
client/src/lib/components/: NotificationContainer.svelte  PostingsContainer.svelte  Sidebar.svelte  SourceDrawer.svelte  Toolbar.svelte  ValidatedInput.svelte
client/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
doc/: notes.md
doc/site/: docusaurus.config.ts
doc/site/docs/: about.md  contribute.md  faq.md  quick-start.md
docs/site/: docusaurus.config.ts  package.json
docs/site/docs/: quick-start.md
img/: logo.afdesign  logo.afdesign~lock~  logo2.afdesign
migration/: Cargo.toml  create_database.sql
migration/src/: lib.rs  m20240121_000001_create_embeddings_table.rs  m20240121_000001_create_extractions_table.rs  m20240121_000001_create_filters_table.rs  m20240121_000001_create_postings_table.rs  m20240121_000001_create_settings_table.rs  m20240121_000001_create_sources_table.rs  m20240121_000001_create_suggestions_table.rs
server/: Cargo.toml  Rocket.toml  rustfmt.toml
server/src/: assistant.rs  extract.rs  main.rs  pool.rs  setup.rs  util.rs
server/src/entities/: embedding.rs  extraction.rs  filter.rs  mod.rs  posting.rs  prelude.rs  settings.rs  source.rs  suggestion.rs
server/src/migration/: m20240121_000001_create_settings_table.rs  m20240121_000001_create_sources_table.rs
server/src/openai/: assistant.rs  embeddings.rs  mod.rs
server/src/routes/: filters.rs  mod.rs  postings.rs  settings.rs  sources.rs  suggestions.rs  usage.rs
(+32 files in other folders)
