[package]
name = "jobs-feed-server"
authors = ["Anna Scholtz <anna@scholtzan.net"]
repository = "https://github.com/scholtzan/jobs-feed"
version = "0.1.0"
edition = "2021"
license = "Elastic License 2.0"

[dependencies]
anyhow = "1.0.79"
async-std = { version = "1", features = ["attributes", "tokio1"] }
chatgpt_rs = "1.2.3"
chrono = "0.4.31"
futures = "0.3.30"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
html2text = "0.10.1"
html2md = "0.2.14"
rocket = { version = "0.5.0", features = ["json"] }
similar = "2.4.0"
sea-orm = { version = "0.12.11", features = [ "sqlx-postgres", "macros", "runtime-tokio-native-tls" ] }
serde_json = "1.0.110"
serde = "1.0.194"
tokio = "1.35.1"
url = "2.5.0"
thiserror = "1.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
migration = { path = "../migration" }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-rustls", 
  "sqlx-postgres",
]
